# MultibankFastAPI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  ruff.toml  run.bat  run.sh  seed_data.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: accounts.py  analytics.py  auth.py  banks.py  cards.py  deps.py  premium.py  transactions.py  users.py
app/core/: config.py  dependencies.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  account.py  bank_connection.py  card.py  transaction.py  user.py
app/schemas/: account.py  auth.py  card.py  transaction.py  user.py
app/services/: auth_service.py  banking_api.py  scheduler.py  sync_service.py
app/utils/: encryption.py
static/: index.html
